; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_mutex.c_getDbPointer.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_mutex.c_getDbPointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @getDbPointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @getDbPointer(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i8* @Tcl_GetString(i32* %8)
  store i8* %9, i8** %7, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i64 @Tcl_GetCommandInfo(i32* %10, i8* %11, %struct.TYPE_3__* %6)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to i32**
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %5, align 8
  br label %23

19:                                               ; preds = %2
  %20 = load i8*, i8** %7, align 8
  %21 = call i64 @sqlite3TestTextToPtr(i8* %20)
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %5, align 8
  br label %23

23:                                               ; preds = %19, %14
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @assert(i32* %24)
  %26 = load i32*, i32** %5, align 8
  ret i32* %26
}

declare dso_local i8* @Tcl_GetString(i32*) #1

declare dso_local i64 @Tcl_GetCommandInfo(i32*, i8*, %struct.TYPE_3__*) #1

declare dso_local i64 @sqlite3TestTextToPtr(i8*) #1

declare dso_local i32 @assert(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
